criando outras requisições no controller
